// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-ezl1u6-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-dpynhu-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-hcl30a-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-81qg8w"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-117zurr-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall css-by28yo-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1bynoch-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-81qg8w"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1fu6ydy-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorSecondary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-14zyj7u-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiInputBase-formControl MuiInputBase-sizeSmall css-s1ym9j-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1shsqvu-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-81qg8w"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1xp5r68-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorSecondary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-93pdlq-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiInputBase-formControl MuiInputBase-sizeSmall css-13mvw41-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall css-1bynoch-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-81qg8w"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`TextField ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root css-1v8slsi-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeSmall MuiInputLabel-outlined css-1aqhi1w-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="test-text-field"
      id="test-text-field-label"
    >
      TextField Test Label
    </label>
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1v5jxjp-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input css-1phryni-MuiInputBase-input-MuiOutlinedInput-input"
        id="test-text-field"
        type="text"
        value="test"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-w1u3ce"
        >
          <span>
            TextField Test Label
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;
